--- a/index.html
+++ b/index.html
@@ -6,36 +6,42 @@
 </head>
 <body>
     <div>
-Privacy Policy
-
+<h1>Privacy Policy</h1>
+<br>
 
 Developer built the Quedu app as a social network app.
-
+<br>
 This privacy policy is used to inform you regarding policies with the collection, use, and 
 disclosure of Personal Information if anyone decided to use this Service.
+<br>
 
-
-1. Overview
+<h2>1. Overview</h2>
+<br>
 
 The app uses advertising (and in app payments) to make revenue. The app uses third party
 libraries for advertising which may collect and share personal information with third
 parties.
+<br>
 
 Links to privacy policies of third party service providers used in the app
+<br>
 
 Google Play Services    https://www.google.com/policies/privacy
 Google Firebase    https://firebase.google.com/support/privacy
+<br>
 
-2. Sharing Your Information
+<h2>2. Sharing Your Information</h2>
+<br>
 
 The developer will share personal information with third parties only in the ways that are 
 described in this privacy statement.
+<br>
 
 Your personal information may be disclosed:
 * As required by law, such as to comply with a subpoena, or similar legal process.
 * To any other third party with your prior consent to do so.
 
-3. Google Play Services
+<h2>3. Google Play Services</h2>
 
 Google Play Services offers APIs and security services to the Android developer ecosystem.
 Google acts as a data controller for any personal data processed in Google Play Services,
@@ -60,7 +66,7 @@ Online resources:
 * Google Privacy Policy        https://policies.google.com/privacy
 
 
-4. Security
+<h2>4. Security</h2>
 
 I am striving to use commercially acceptable means of protecting your Personal
 Information. But remember that no method of transmission over the internet, or method of 
@@ -68,7 +74,7 @@ electronic storage is 100% secure and reliable, and I cannot guarantee its absol
 security.
 
 
-5. Links to Other Sites
+<h2>5. Links to Other Sites</h2>
 
 This Service may contain links to other sites. If you click on a third-party link, you 
 will be directed to that site. Note that these external sites are not operated by me.
@@ -77,7 +83,7 @@ no control over and assume no responsibility for the content, privacy policies, 
 practices of any third-party sites or services.
 
 
-6. Children’s Privacy
+<h2>6. Children’s Privacy</h2>
 
 These Services do not address anyone under the age of 16. I do not knowingly collect 
 personally identifiable information from children under 16. In the case I discover that 
@@ -87,7 +93,7 @@ provided personal information, please contact me so that I will be able to do ne
 actions.
 
 
-7. Distribution
+<h2>7. Distribution</h2>
 
 The only official channel for distribution of this app are:
 * Google Play Store                https://play.google.com/
@@ -96,7 +102,7 @@ Any other mode of distribution is not official and thus, is not maintained by th
 This privacy policy is effective to distribution made on official channel only.
 
 
-8. Changes to This Privacy Policy
+<h2>8. Changes to This Privacy Policy</h2>
 
 This policy may be updated from time to time.
 
